argo-rollouts/overlays/production/dashboard-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argo-rollouts-dashboard
spec:
  template:
    spec:
      containers:
        - name: argo-rollouts-dashboard
          image: quay.io/argoproj/kubectl-argo-rollouts:v1.4.1
          # vnovoselskiy/kubectl-argo-rollouts:latest
