argo-rollouts/overlays/production/rollouts-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argo-rollouts
spec:
  template:
    spec:
      containers:
        - name: argo-rollouts
          image: quay.io/argoproj/argo-rollouts:v1.3.1
