argo-rollouts/overlays/production/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: argo-rollouts-dashboard
  namespace: argo-rollouts
spec:
  rules:
  - host: rollouts.alboroto.live
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argo-rollouts-dashboard
            port:
              number: 3100
